0320 관리자 페이지 최종 확인 완료

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -989,7 +989,7 @@
                                             class="status-filter notice-type-filter"
                                     >
                                         <option value="all">전체</option>
-                                        <option value="공지">공지</option>
+                                        <option value="공지사항">공지사항</option>
                                         <option value="이벤트">이벤트</option>
                                     </select>
                                     <select
