--- a/src/main/resources/static/css/main/program-detail.css
+++ b/src/main/resources/static/css/main/program-detail.css
@@ -1780,6 +1780,17 @@ li>.btns{
     border: 1px solid rgb(196, 196, 196);
     color: rgb(255, 255, 255);
     padding: 0px 16px;
+    background: rgb(0, 221, 109);
+    height: 56px;
+    line-height: 54px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.submitButton:disabled{
+    border: 1px solid rgb(196, 196, 196);
+    color: rgb(255, 255, 255);
+    padding: 0px 16px;
     background: rgb(196, 196, 196);
     height: 56px;
     line-height: 54px;
