--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -27,7 +27,7 @@
                     <button
                             aria-pressed="true"
                             type="button"
-                            value="jobCategory"
+                            value=""
                             class="categoryButton selectAllButton"
                     >
                         <span>전체</span>
@@ -35,170 +35,82 @@
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="1"
                             class="categoryButton"
                     >
-                        <span>기획·전략</span>
+                        <span>서비스업</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="2"
                             class="categoryButton"
                     >
-                        <span>마케팅·홍보·조사</span>
+                        <span>제조·화학</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="3"
                             class="categoryButton"
                     >
-                        <span>회계·세무·재무</span>
+                        <span>IT·웹·통신</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="4"
                             class="categoryButton"
                     >
-                        <span>인사·노무·HRD</span>
+                        <span>은행·금융업</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="5"
                             class="categoryButton"
                     >
-                        <span>총무·법무·사무</span>
+                        <span>미디어·디자인</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="6"
                             class="categoryButton"
                     >
-                        <span>IT개발·데이터</span>
+                        <span>교육업</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="7"
                             class="categoryButton"
                     >
-                        <span>디자인</span>
+                        <span>의료·제약·복지</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="8"
                             class="categoryButton"
                     >
-                        <span>영업·판매·무역</span>
+                        <span>판매·유통</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="9"
                             class="categoryButton"
                     >
-                        <span>고객상담·TM</span>
+                        <span>건설업</span>
                     </button>
                     <button
                             aria-pressed="false"
                             type="button"
-                            value="jobCategory"
+                            value="10"
                             class="categoryButton"
                     >
-                        <span>구매·자재·물류</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>상품기획·MD</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>운전·운송·배송</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>서비스</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>생산</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>건설·건축</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>의료</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>연구·R&D</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>교육</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>미디어·문화·스포츠</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>금융·보험</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="jobCategory"
-                            class="categoryButton"
-                    >
-                        <span>공공·복지</span>
+                        <span>기관·협회</span>
                     </button>
                 </div>
             </section>
@@ -323,6 +235,9 @@
 </body>
 <script src="/js/main/program-list.js"></script>
 <script src="/js/member/mypage-all.js"></script>
+<script src="/js/main/program_list_service.js"></script>
+<script src="/js/main/program_list_event.js"></script>
+<script src="/js/main/program_list_layout.js"></script>
 <script th:if="${param.refresh}" th:inline="javascript">
     window.location.href = window.location.pathname; // 현재 페이지 새로고침
 
