--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -27,7 +27,7 @@
                     <button
                             aria-pressed="true"
                             type="button"
-                            value=""
+                            value="all"
                             class="categoryButton selectAllButton"
                     >
                         <span>전체</span>
@@ -110,6 +110,7 @@
                             value="10"
                             class="categoryButton"
                     >
+                        <a href="/program/list"></a>
                         <span>기관·협회</span>
                     </button>
                 </div>
