일단 카테고리 기능 작성 로그인/비로그인 여부에 따른 기능 차이 / 검색 + 카테고리 동시 작동 하게 만들기

--- a/src/main/resources/static/css/main/program-list.css
+++ b/src/main/resources/static/css/main/program-list.css
@@ -316,7 +316,7 @@ main{
     margin-top: 24px;
 }
 
-.listJobBtnWrap >.categoryButton{
+.listJobBtnWrap label{
     margin: 0px 10px 10px 0px;
     padding: 7px 16px;
     font-size: 16px;
@@ -326,19 +326,35 @@ main{
     color: rgb(68, 68, 68);
 }
 
-.categoryButton[aria-pressed="true"] {
+.listJobBtnWrap label button{
+    margin-bottom : 30px;
+}
+
+.listJobBtnWrap label:has(input[type="checkbox"]){
+    /*background-color: rgb(228, 228, 228);*/
+    border: 1px solid rgb(228, 228, 228);
+}
+
+.listJobBtnWrap label:has(input[type="checkbox"]:checked){
     color: rgb(255, 255, 255);
     border: 1px solid rgb(0, 221, 109);
     background-color: rgb(0, 221, 109);
     font-weight: bold;
 }
+/*.categoryButton[aria-pressed="true"] {*/
+/*    color: rgb(255, 255, 255);*/
+/*    border: 1px solid rgb(0, 221, 109);*/
+/*    background-color: rgb(0, 221, 109);*/
+/*    font-weight: bold;*/
+/*}*/
 
-.categoryButton[aria-pressed="false"]:hover{
-    background-color: rgb(228, 228, 228);
-    border: 1px solid rgb(228, 228, 228);
-}
+/*.categoryButton[aria-pressed="false"]:hover{*/
+/*    background-color: rgb(228, 228, 228);*/
+/*    border: 1px solid rgb(228, 228, 228);*/
+/*}*/
 
-.categoryButton>span{
+.listJobBtnWrap label:has(input[type="checkbox"]:checked) span{
+    color: white;
     position: relative;
     top: 1px;
 }
