--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -24,95 +24,129 @@
             <h1 class="listTitle">체험 공고 탐색</h1>
             <section class="listJobs">
                 <div class="listJobBtnWrap">
-                    <button
-                            aria-pressed="true"
-                            type="button"
-                            value="all"
-                            class="categoryButton selectAllButton"
-                    >
-                        <span>전체</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="1"
-                            class="categoryButton"
-                    >
-                        <span>서비스업</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="2"
-                            class="categoryButton"
-                    >
-                        <span>제조·화학</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="3"
-                            class="categoryButton"
-                    >
-                        <span>IT·웹·통신</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="4"
-                            class="categoryButton"
-                    >
-                        <span>은행·금융업</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="5"
-                            class="categoryButton"
-                    >
-                        <span>미디어·디자인</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="6"
-                            class="categoryButton"
-                    >
-                        <span>교육업</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="7"
-                            class="categoryButton"
-                    >
-                        <span>의료·제약·복지</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="8"
-                            class="categoryButton"
-                    >
-                        <span>판매·유통</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="9"
-                            class="categoryButton"
-                    >
-                        <span>건설업</span>
-                    </button>
-                    <button
-                            aria-pressed="false"
-                            type="button"
-                            value="10"
-                            class="categoryButton"
-                    >
-                        <a href="/program/list"></a>
-                        <span>기관·협회</span>
-                    </button>
+                    <label>
+                        <input type="checkbox" class="allCategory" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>전체</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="1" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>서비스업</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="2" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>제조·화학</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="3" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>IT·웹·통신</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="4" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>은행·금융업</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="5" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>미디어·디자인</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="6" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>교육업</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="7" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>의료·제약·복지</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="8" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>판매·유통</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="9" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>건설업</span>
+                        </button>
+                    </label>
+                    <label>
+                        <input type="checkbox" value="10" class="categorySelect" style="display: none;"/>
+                        <button
+                                aria-pressed="true"
+                                type="button"
+                                value="all"
+                                class="categoryButton selectAllButton"
+                        >
+                            <span>기관·협회</span>
+                        </button>
+                    </label>
+
+
                 </div>
             </section>
         </section>
