--- a/src/main/resources/templates/member/account-payment.html
+++ b/src/main/resources/templates/member/account-payment.html
@@ -171,8 +171,15 @@
     <div id="modal"></div>
 
 </body>
+
+<script th:inline="javascript">
+    const member = [[${session.member}]];
+</script>
+<script src="/js/member/mypage-payment-event.js"></script>
+<script src="/js/member/mypage-payment-service.js"></script>
+<script src="/js/member/mypage-payment-layout.js"></script>
 <script src="/js/member/mypage-all.js"></script>
-<script src="/js/member/mypage-payment.js"></script>
+<script src="/js/member/mypage-payment-event.js"></script>
 <script src="https://js.bootpay.co.kr/bootpay-5.0.2.min.js" type="application/javascript"></script>
 
 </html>
