--- a/src/main/resources/templates/enterprise/program-list.html
+++ b/src/main/resources/templates/enterprise/program-list.html
@@ -42,146 +42,43 @@
             </div>
 <!-- 폰트 굵기는 전체적으로 얇게, 크기도 약간 작게, 3안 정도 제작해서 메일로 보고하기 -->
             <div class="columns">
-                <div class="column">
+                <div class="column" id="work">
                     <div class="card-text-wrapper">
                         <h3>진행중 </h3>
                         <h3> 5</h3>
                     </div>
 
-                    <div class="card ">
-                        <div>JAVA ERP 개발 및 운영 경력 채용</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="ongoing">진행중</div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-                                viewBox="0 0 32 32">
-                                <path fill="#fff" fill-rule="evenodd"
-                                    d="M22.221 4.667a2.667 2.667 0 0 0-3.77 0l-11.602 11.6c-.5.501-.781 1.18-.781 1.887v3.18A2.667 2.667 0 0 0 8.734 24h3.18c.707 0 1.386-.281 1.886-.781L25.4 11.617a2.667 2.667 0 0 0 0-3.77l-3.18-3.18ZM8.734 18.153l11.602-11.6 3.18 3.179-11.602 11.601h-3.18v-3.18ZM5.334 26a1.333 1.333 0 1 0 0 2.666h21.333a1.333 1.333 0 0 0 0-2.666H5.333Z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                            <button>수정</button>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <div>IT개발본부 프론트엔트 개발자 인턴(채용 전환형)</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="ongoing">진행중</div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-                                viewBox="0 0 32 32">
-                                <path fill="#fff" fill-rule="evenodd"
-                                    d="M22.221 4.667a2.667 2.667 0 0 0-3.77 0l-11.602 11.6c-.5.501-.781 1.18-.781 1.887v3.18A2.667 2.667 0 0 0 8.734 24h3.18c.707 0 1.386-.281 1.886-.781L25.4 11.617a2.667 2.667 0 0 0 0-3.77l-3.18-3.18ZM8.734 18.153l11.602-11.6 3.18 3.179-11.602 11.601h-3.18v-3.18ZM5.334 26a1.333 1.333 0 1 0 0 2.666h21.333a1.333 1.333 0 0 0 0-2.666H5.333Z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                            <button>수정</button>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <div>모바일 개발자 모집 (경력 3년~19년)</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="ongoing" >진행중</div>
-                            <div class="editing" >수정요청중</div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-                                viewBox="0 0 32 32">
-                                <path fill="#fff" fill-rule="evenodd"
-                                    d="M22.221 4.667a2.667 2.667 0 0 0-3.77 0l-11.602 11.6c-.5.501-.781 1.18-.781 1.887v3.18A2.667 2.667 0 0 0 8.734 24h3.18c.707 0 1.386-.281 1.886-.781L25.4 11.617a2.667 2.667 0 0 0 0-3.77l-3.18-3.18ZM8.734 18.153l11.602-11.6 3.18 3.179-11.602 11.601h-3.18v-3.18ZM5.334 26a1.333 1.333 0 1 0 0 2.666h21.333a1.333 1.333 0 0 0 0-2.666H5.333Z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                            <button>수정</button>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <div>레진코믹스 백엔드 개발자</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="ongoing">진행중</div>
-                            <div class="editing">수정확인중</div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-                                viewBox="0 0 32 32">
-                                <path fill="#fff" fill-rule="evenodd"
-                                    d="M22.221 4.667a2.667 2.667 0 0 0-3.77 0l-11.602 11.6c-.5.501-.781 1.18-.781 1.887v3.18A2.667 2.667 0 0 0 8.734 24h3.18c.707 0 1.386-.281 1.886-.781L25.4 11.617a2.667 2.667 0 0 0 0-3.77l-3.18-3.18ZM8.734 18.153l11.602-11.6 3.18 3.179-11.602 11.601h-3.18v-3.18ZM5.334 26a1.333 1.333 0 1 0 0 2.666h21.333a1.333 1.333 0 0 0 0-2.666H5.333Z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                            <button>수정</button>
-                        </div>
-                    </div>
+
                 </div>
-                <div class="column">
+                <div class="column" id="wait">
                     <div class="card-text-wrapper">
                         <h3>승인 요청중</h3>
                         <h3>5</h3>
                     </div>
-                    <div class="card ">
-                        <div>Java 백엔드 개발자(경력: 5년~15년)</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="pending">승인요청중</div>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <div>C++ 소프트웨어 개발자(신입)</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="pending">승인확인중</div>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <div>[개발] Backend Engineer (경력)</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="pending">승인확인중</div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="column">
+                </div>
+                <div class="column" id="write">
                     <div class="card-text-wrapper">
                         <h3>작성중</h3>
                         <h3>5</h3>
                     </div>
-                    <div class="card ">
-                        <div>사내 시스템 서버 개발자</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="writing">작성중</div>
-
-                        </div>
-                    </div>
                 </div>
-
-                <div class="column">
+                <div class="column" id="end">
                     <div class="card-text-wrapper">
                         <h3>마감</h3>
                         <h3>5</h3>
                     </div>
-                    <div class="card ">
-                        <div>QA 경력자 채용</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="closed">마감</div>
-
-                        </div>
-                    </div>
-
-                    <div class="card ">
-                        <div>블록체인 스마트컨트랙트 주니어 개발자</div>
-                        <div>2021.07.28</div>
-                        <div class="card-bottom">
-                            <div class="closed">마감</div>
-
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
         <!-- 채울 내용은 이 태그 안에 작성. -->
     </div>
 
-    </div>
+
     <div id="modal"></div>
 
 </body>
-
+<script src="/js/enterprise/company-program-service.js"></script>
+<script src="/js/enterprise/company-program-layout.js"></script>
+<script src="/js/enterprise/company-program-event.js"></script>
 </html>
