--- a/src/main/resources/templates/enterprise/program-edit.html
+++ b/src/main/resources/templates/enterprise/program-edit.html
@@ -49,9 +49,9 @@
                 <label for="date">포지션 마감일</label>
                 <input type="date" id="date">
 
-                <label for="experience">경력</label>
-                <input type="number" id="experience"
-                    placeholder="경력 (년 단위)">
+<!--                <label for="experience">경력</label>-->
+<!--                <input type="number" id="experience"-->
+<!--                    placeholder="경력 (년 단위)">-->
 
                 <label for="location">근무지</label>
                 <input type="text" id="location"
@@ -66,22 +66,22 @@
     Vue.js 기반의 개발환경
     FrontEnd 개발 확장을 위한 기술 R&D"></textarea>
 
-                <label for="requirements">자격요건</label>
-                <textarea id="requirements" rows="4" placeholder="UI개발 (html, css, javascript) 경력 5년 이상
-    Vue.js, React, Angular 등 javascript framework 기반 개발 경험
-    Git을 이용한 형상관리 경험"></textarea>
+<!--                <label for="requirements">자격요건</label>-->
+<!--                <textarea id="requirements" rows="4" placeholder="UI개발 (html, css, javascript) 경력 5년 이상-->
+<!--    Vue.js, React, Angular 등 javascript framework 기반 개발 경험-->
+<!--    Git을 이용한 형상관리 경험"></textarea>-->
 
-                <label for="preferences">우대사항</label>
-                <textarea id="preferences" rows="2" placeholder="신기술 트렌드에 관심이 높으신 분
-    문제 해결 능력이 뛰어나신 분"></textarea>
+<!--                <label for="preferences">우대사항</label>-->
+<!--                <textarea id="preferences" rows="2" placeholder="신기술 트렌드에 관심이 높으신 분-->
+<!--    문제 해결 능력이 뛰어나신 분"></textarea>-->
 
                 <label for="benefits">복지 및 혜택</label>
                 <textarea id="benefits" rows="2" placeholder="3년 재직시 리프레시 휴가 추가 지원
     직무 전문성을 위한 외부 교육비 100% 지원"></textarea>
 
-                <label for="process">채용절차 및 기타 지원 유의사항</label>
-                <textarea id="process" rows="3"
-                    placeholder="채용절차 / 지원방법 / 지원 시 주의사항 / 사전질문 / 근무조건 등 채용에 관련된 정보를 상세하게 작성해주세요."></textarea>
+<!--                <label for="process">채용절차 및 기타 지원 유의사항</label>-->
+<!--                <textarea id="process" rows="3"-->
+<!--                    placeholder="채용절차 / 지원방법 / 지원 시 주의사항 / 사전질문 / 근무조건 등 채용에 관련된 정보를 상세하게 작성해주세요."></textarea>-->
             </div>
            <div class="sidebar-wrapper">
             <div class="sidebar right">
