--- a/src/main/resources/templates/member/mypage-payment.html
+++ b/src/main/resources/templates/member/mypage-payment.html
@@ -403,8 +403,8 @@
         style="display: none; visibility: hidden;"></iframe><next-route-announcer
         style="position: absolute;"></next-route-announcer> -->
 </body>
-<script src="/static/js/member/mypage-all.js"></script>
-<script src="/js/member/mypage-payment-event.js"></script>
-<script src="https://js.bootpay.co.kr/bootpay-5.0.2.min.js" type="application/javascript"></script>
+<!--<script src="/static/js/member/mypage-all.js"></script>-->
+<!--<script src="/js/member/mypage-payment-event.js"></script>-->
+<!--<script src="https://js.bootpay.co.kr/bootpay-5.0.2.min.js" type="application/javascript"></script>-->
 
 </html>
