--- a/src/main/resources/templates/member/account-payment.html
+++ b/src/main/resources/templates/member/account-payment.html
@@ -23,6 +23,7 @@
             font-family: Jumpit;
         }
     </style>
+
 </head>
 
 <body class="__className_f53396" style="">
@@ -100,7 +101,7 @@
                                 </dl>
                             </a></li>
                     </ul> -->
-                    <ul class="applied-list0">
+                    <ul class="applied-list0" id="payHistory" style="list-style-type: none; padding: 0;">
                         <h1>
                             <div>결제관리
                             </div>
@@ -161,8 +162,9 @@
                                 </select>
                             </div>
                         </h1>
-                        <div class="applied-list-blank">
-                            결제정보가 없습니다.</div>
+
+<!--                        <div class="applied-list-blank">-->
+<!--                            결제정보가 없습니다.</div>-->
                     </ul>
                 </div>
             </div>
@@ -175,11 +177,10 @@
 <script th:inline="javascript">
     const member = [[${session.member}]];
 </script>
-<script src="/js/member/mypage-payment-event.js"></script>
 <script src="/js/member/mypage-payment-service.js"></script>
 <script src="/js/member/mypage-payment-layout.js"></script>
-<script src="/js/member/mypage-all.js"></script>
 <script src="/js/member/mypage-payment-event.js"></script>
+<script src="/js/member/mypage-all.js"></script>
 <script src="https://js.bootpay.co.kr/bootpay-5.0.2.min.js" type="application/javascript"></script>
 
 </html>
