--- a/src/main/resources/templates/enterprise/program-list.html
+++ b/src/main/resources/templates/enterprise/program-list.html
@@ -38,7 +38,10 @@
         <div class="container">
             <div class="title">
                 <h2>포지션 리스트</h2>
-                <button class="register-btn">포지션 등록</button>
+                <a href="/enterprise/program-edit">
+                    <button class="register-btn">포지션 등록</button>
+                </a>
+
             </div>
 <!-- 폰트 굵기는 전체적으로 얇게, 크기도 약간 작게, 3안 정도 제작해서 메일로 보고하기 -->
             <div class="columns">
