--- a/src/main/resources/templates/main/program-detail.html
+++ b/src/main/resources/templates/main/program-detail.html
@@ -227,14 +227,14 @@
                         </button>
                     </div>
                     <div class="imageBanner scroll-vertical" >
-<!--                        <div th:each="image : *{companyImageList}">-->
-<!--                            <img-->
-<!--                                    th:src="${image.companyImagePath}"-->
-<!--                                    height="441"-->
-<!--                                    width="630"-->
-<!--                                    loading="lazy"-->
-<!--                            />-->
-<!--                        </div>-->
+                        <div th:each="image : *{companyImageList}">
+                            <img
+                                    th:src="${image.companyImagePath}"
+                                    height="441"
+                                    width="630"
+                                    loading="lazy"
+                            />
+                        </div>
                     </div>
                     <div class="bannerCount">
                         <span>1</span>
