--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -25,7 +25,7 @@
             <section class="listJobs">
                 <div class="listJobBtnWrap">
                     <label>
-                        <input type="checkbox" value="all" class="allCategory" style="display: none;"/>
+                        <input type="checkbox" value="all" class="allCategory" checked style="display: none;"/>
                         <button
                                 aria-pressed="true"
                                 type="button"
